kubernetes/apps/chengdu/linkding/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkding
  namespace: linkding
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`linkding.cd.zouzonghua.cn`) || Host(`linkding.cd.home.arpa`)
      services:
        - name: linkding
          port: 9090
  tls: {}
